Fix alignment

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -39,6 +39,7 @@ header {
 }
 .content-wrapper {
     max-width: 1260px;
+    margin: 0 auto;
 }
 main {
     margin: 0 auto;
